// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Upload Component file upload should render component 1`] = `
<div>
  <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-left oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <!--v-if-->
    <!-- @slot Content of the button -->
    <span>
      <span class="oc-icon oc-icon-m oc-icon-passive oc-resource-icon oc-resource-icon-file"><!----></span>
      <!--v-if-->
    </span>
    <span id="files-file-upload-button">Files</span>
  </button>
  <input aria-labelledby="files-file-upload-button" class="upload-input-target" id="files-file-upload-input" multiple="" name="folder" tabindex="-1" type="file">
</div>
`;

exports[`Resource Upload Component folder upload should render component 1`] = `
<div>
  <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-left oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
    <!--v-if-->
    <!-- @slot Content of the button -->
    <span>
      <span class="oc-icon oc-icon-m oc-icon-passive oc-resource-icon oc-resource-icon-folder"><!----></span>
      <!--v-if-->
    </span>
    <span id="files-folder-upload-button">Folder</span>
  </button>
  <input allowdirs="true" aria-labelledby="files-folder-upload-button" class="upload-input-target" id="files-folder-upload-input" mozdirectory="true" name="file" tabindex="-1" type="file" webkitdirectory="true">
</div>
`;
